infrastructure/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "www.edwardsuwirya.com"
        - "api.edwardsuwirya.com"
#      tls:
#        httpsRedirect: true
    - port:
        number: 443
        name: https-url-1
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "url-1-certs"
      hosts:
        - "www.edwardsuwirya.com"
        - "api.edwardsuwirya.com"
